2008-07-27  Mike Krüger <mkrueger@novell.com> 

	* Parser/DomParser.cs: Worked on code completion/new dom.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/VBCompilerParameters.cs: Moved serialization engine to
	  MonoDevelop.Core. Use new syntax for specifying attribute scope.

2008-07-15  Mike Krüger <mkrueger@novell.com> 

	* Parser/DomParser.cs: Added missing method (interface changed).

2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* Parser/DomParser.cs: Added missing method (interface changed).

2008-06-14  Ankit Jain  <jankit@novell.com>

	Fix bug #400300.
	* VBBindingCompilerServices.cs (ParseOutput): Returns BuildResult now.
	Move construction of BuildResult to here.

2008-06-14  Ankit Jain  <jankit@novell.com>

	* VBBindingCompilerServices.cs (GenerateOptions): Emit -debug option.

2008-06-13  Mike Krüger <mkrueger@novell.com> 

	* Parser/DomParser.cs: worked on dom parser.

2008-06-13  Mike Krüger <mkrueger@novell.com> 

	* Parser/DomParser.cs: Some changes in the vb.net dom parser.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* VBNetBinding.addin.xml: Bump MD version.

2008-05-28  Mike Krüger <mkrueger@novell.com> 

	* VBNetBinding.addin.xml, Parser/DomParser.cs: Worked on vb.net dom
	  parser.

2008-05-27  Mike Krüger <mkrueger@novell.com> 

	* VBNetBinding.mdp, Parser/DomParser.cs, Makefile.am: Added new dom
	  parser for vb.net.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* VBNetBinding.addin.xml: Merged the extension points for project and
	  solution option panels into a single extension point. A single
	  extension point will now be used for all kinds of items. Extension
	  conditions can be used to make panels visible only for some
	  specific item types.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* VBBindingCompilerServices.cs, VBLanguageBinding.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so